<resources>
    <string name="app_name">Flight Offers</string>

    <string name="wifi_error_title">No network connection</string>
    <string name="wifi_error_text">Connect to the internet and try again..</string>
    <string name="refresh">Refresh</string>

    <string name="apply">Aplikovať</string>

    <string name="adults">Počet dospelých</string>
    <string name="children">Počet detí</string>

    <string name="filter">Filter</string>

    <string name="arrange_by">Zotriediť</string>
    <string name="asc">Vzostupne</string>
    <string name="desc">Zostupne</string>

    <string name="error">Error</string>
    <string name="error_text">Ups, vyskytla sa neznáma chyba. Skúste to neskôr.</string>

</resources>
