<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/dark_bg"
    android:padding="@dimen/padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:src="@drawable/ic_wifi_off"
        android:layout_gravity="center_horizontal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:tint="@color/grey" />

    <TextView
        android:layout_marginTop="8dp"
        android:text="@string/wifi_error_title"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BoldText20"
        />


    <TextView
        android:text="@string/wifi_error_text"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/NormalText16"
        />


    <Button
        android:id="@+id/refresh_network_state"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border_bg"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:text="@string/refresh"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        style="@style/RegularText"
        >

    </Button>

</LinearLayout>